--- a/Demo/demoSpringBootThymeleaf/src/main/resources/application.properties
+++ b/Demo/demoSpringBootThymeleaf/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Konfigurasi DataSource
-spring.datasource.url= jdbc:mysql://localhost:3306/data_mahasiswa
-spring.datasource.username= root
-spring.datasource.password= 0852
+spring.datasource.url= jdbc:mysql://localhost:3306/yourdb
+spring.datasource.username= yourusername
+spring.datasource.password= yourpassword
 
 # Konfigurasi Hibernate
 spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
